# debian-packaging

./: .gitignore  README.rst  requirements.txt  setup.cfg
debian_packaging/: launch.py  versions.py
debian_packaging/pydist/: cpython2_fallback  cpython3_fallback  generate_fallback_list.py
debian_packaging/utils/: __init__.py  interpreter.py  version.py
epoch/: debian.yaml
examples/: oslo.db.control.j2
