[metadata]
name = debian_packaging
summary = Jinja2 template renderer for generating .spec files
description-file =
    README.rst
author = Nikolay Mahotkin
author-email = nmakhotkin@mirantis.com
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    renderspec-deb = debian_packaging.launch:main

[files]
packages =
    debian_packaging

[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1